--- a/package.json
+++ b/package.json
@@ -23,5 +23,10 @@
     "gulp": "^4.0.2",
     "webpack": "^4.46.0",
     "webpack-stream": "^5.2.1"
+  },
+  "dependencies": {
+    "jquerry": "0.0.1-security",
+    "slick-carousel": "^1.8.1",
+    "slick-slider": "^1.8.2"
   }
 }
